--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <body>  
-        <body>
+        <h1> </QUER MUDAR DE ESTILO?h1>
+            <p>Roupas estilo hippe e afro</p>
     
     
         <li>Segunda-feira</li>
