--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>  
         <h1> </QUER MUDAR DE ESTILO?h1>
             <p>Roupas estilo hippe e afro</p>
-    
+    <img   >
     
         <li>Segunda-feira</li>
         <a href="segunda.html" target="_blank">Horário de segunda-feira dia 26/02</a>
