--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <body>  
-        <h1> </QUER MUDAR DE ESTILO?h1>
-            <p>Roupas estilo hippe e afro</p>
+        <h1> </JA TENTOU UM ESTILO AFRO OU HIPPIE??h1>
+            <p>roupas que vieram espicial da africa do sul e de portugal</p>
     <img   >
     
         <li></li>
-        <a href="segunda.html" target="_blank">Horário de segunda-feira dia 26/02</a>
+        <a href="mulher hippie, braços pra cima.png" target="_blank">mulher hippie, braços pra cima.png</a>
     
         <li>Terça-feira</li>
         <a href="terca.html" target="_blank">Horário de terça-feira dia 27/02</a>
