--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <body>  
         <h1> </JA TENTOU UM ESTILO AFRO OU HIPPIE??h1>
+            
             <p>roupas que vieram espicial da africa do sul e de portugal</p>
-    <img   >
+    <img src="mulher parada olhando serio hippie" alt="mulher olhando serio hippie">
     
         <li></li>
         <a href="mulher hippie, braços pra cima.jpg" target="_blank">Primeiro look hippie para aquelas garotas que gostam de um estilo diferenciado e super chique</a>
