--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>  
         <h1> </JA TENTOU UM ESTILO AFRO OU HIPPIE??h1>
             
-            <p>roupas que vieram espicial da africa do sul e de portugal</p>
+            <p>ROUPAS QUE VIERAM DIRETO DA AFRICA DO SUL E DA EUROPA</p>
     <img src="mulher parada olhando serio hippie" alt="mulher olhando serio hippie">
     
         <li>WINDBREAKER</li>
