--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1> </JA TENTOU UM ESTILO AFRO OU HIPPIE??h1>
             
             <p>ROUPAS QUE VIERAM DIRETO DA AFRICA DO SUL E DA EUROPA</p>
-    <img src="MODELO WINK COM NOSSO LOOK" alt="mulher olhando serio hippie">
+    <img src="MODELO WINK COM NOSSO LOOK" alt="MODELO WINK COM NOSSO LOOK">
     
         <li>WINDBREAKER</li>
         <a href="mulher hippie, braços pra cima.jpg" target="_blank">Primeiro look hippie para aquelas garotas que gostam de um estilo diferenciado e super chique</a>
