--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a href="homem preto de azul.jpg" target="_blank">Ta achando que não temos opções para os homens? estamos sempre incluiindo todos!</a>
         
     </ol>
-    <h2> PARA VER TODOS OS ARQUIVOS</h2>
-    <a href="https://github.com/rogeriodfreis/HTML-CSS" target="_blank">Acesse o GitHub para pegar os exemplos feitos</a>
+    <h2> MEU PERFIL NO GITHUB</h2>
+    <a href="https://github.com/exemplo-01/HTML-CSS" target="_blank">Acessemeu perfil</a>
 
     <h2> PARA BAIXAR ESSE CONTEUDO EM PDF</h2>
     <a href="https://github.com/rogeriodfreis/HTML-CSS/blob/main/COINI.pdf" target="_blank"  download="COINI.pdf" type="aplication/pdf">
