--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         
     </ol>
     <h2> MEU PERFIL NO GITHUB</h2>
-    <a href="https://github.com/exemplo-01/HTML-CSS" target="_blank">Acessemeu perfil</a>
+    <a href="https://github.com/angelallana/HTML-CSS" target="_blank">Acesse meu perfil</a>
 
     <h2> PARA BAIXAR ESSE CONTEUDO EM PDF</h2>
-    <a href="https://github.com/rogeriodfreis/HTML-CSS/blob/main/COINI.pdf" target="_blank"  download="COINI.pdf" type="aplication/pdf">
+    <a href="https://github.com/exemplo-01/HTML-CSS/blob/main/COINI.pdf" target="_blank"  download="COINI.pdf" type="aplication/pdf">
         Baixe aqui seu PDF dos principais comandos.
     </a>
      <h2> PARA MAIS INFORMAÇÕES </h2>
