--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         
     </ol>
     <h2> MEU PERFIL NO GITHUB</h2>
-    <a href="https://github.com/angelallana/HTML-CSS" target="_blank">Acesse meu perfil</a>
+    <a https://github.com/angelallana/Exemplo-01/edit/main/index.html">Acesse meu perfil</a>
 
     <h2> PARA BAIXAR ESSE CONTEUDO EM PDF</h2>
     <a href="https://github.com/exemplo-01/HTML-CSS/blob/main/COINI.pdf" target="_blank"  download="COINI.pdf" type="aplication/pdf">
         Baixe aqui seu PDF dos principais comandos.
     </a>
      <h2> PARA MAIS INFORMAÇÕES </h2>
-    <a https://github.com/angelallana/Exemplo-01/edit/main/index.html>
+    <a https://github.com/angelallana/Exemplo-01/edit/main/index.html >
     Veja aqui mais detalhes sobre as tendências.
     </a>
     
