--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
     </ol>
     <h2> MEU PERFIL NO GITHUB</h2>
-    <a https://github.com/angelallana.com.br>Acesse meu perfil</a>
+    <a "https://github.com/angelallana" target="_blank">Acesse o meu perfil GitHub</a>
 
     <h2> PARA BAIXAR ESSE CONTEUDO EM PDF</h2>
     <a href="https://github.com/mulher black de blusão laranja.jpg"/blob/main/COINI.pdf" target="_blank" 
