--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ICONE.ico" type="Aula-03/ICONE">
     <body>  
-        <h1> </h1>
+        <h1>ANGELMODELS</h1>
             
             
         <p>ROUPAS QUE VIERAM DIRETO DA AFRICA DO SUL E DA EUROPA</p>
@@ -29,8 +29,8 @@
     <h2> MEU PERFIL NO GITHUB</h2>
     <a "https://github.com/angelallana" target="_blank">Acesse o meu perfil GitHub</a>
 
-    <h2> PARA BAIXAR ESSE CONTEUDO EM PDF</h2>
-    <a href="https://github.com/mulher black de blusão laranja.jpg"/blob/main/COINI.pdf" target="_blank" 
+    <h2> PARA MAIS INFORMAÇÕES SOBRE A ANGELMODELS</h2>
+    <a href="https://github.com/ANGELMODELS"/blob/main/COINI.pdf" target="_blank" 
         Baixe aqui seu PDF dos principais comandos.
     </a>
      <h2> PARA MAIS INFORMAÇÕES </h2>
