--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
      </ol>
     <h2> MEU PERFIL NO GITHUB</h2>
             </a https://github.com/angelallana/Exemplo-01/edit/main/index.html</a>
-
+   <h2 PARA MAIS INFORMAÇÕES SOBRE A ANGELMODELS>
     <h2>https://github.com/angelallana/Exemplo-01/edit/main/index.html </h2>
-     <h2> PARA MAIS INFORMAÇÕES </h2>
-    <a https://angelallana.github.io/Exemplo-01/ </a>
+     <h3> PARA MAIS INFORMAÇÕES </h3>
+    <a https://angelallana.github.io/Exemplo-01/kuavi.com.br/  target="_blank" </a>
     
     
 </body>
