--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
       <a https://github.com/angelallana/Exemplo-01/edit/main/index.html/  target="_blank">
     </a>
     <h3> MAIS EXEMPLOS DE MODA AFRO E HIPPIE</h3>
-            <h2>https://github.com/angelallana/Exemplo-01/edit/main/index.html </h2>
+    <h3>https://github.com/angelallana/Exemplo-01/blob/main/Angel%20Models.pdf</h3>
+
+   </a>
+
+     <body>  
     
     
 </body>
