--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         }
     </style>
 </head>
-<body>  
+<body> 
+    <="opcoes-acessibilidade">
     <h1>ANGELMODELS</h1>
     <p>ROUPAS QUE VIERAM DIRETO DA ÁFRICA DO SUL E DA EUROPA</p>
     <img src="roupa hippie, braços pra cima.jpg" alt="roupa hippie, braços pra cima.jpg"> 
