--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
     <="opcoes-acessibilidade">
     <h1>ANGELMODELS</h1>
     <p>ROUPAS QUE VIERAM DIRETO DA ÁFRICA DO SUL E DA EUROPA</p>
-    <img src="roupa hippie, braços pra cima.jpg" alt="roupa hippie, braços pra cima.jpg"> 
+    <img src="roupa hippie, braços pra cima.jpg" alt="Modelo negra com varios acessorios, usando roupas que vieram direto na Africa e Europa.jpg"> 
     <li>LOOKINHO DE LEI</li>
     <img src="MODELO WINK COM NOSSO LOOK" alt="MODELO WINK COM NOSSO LOOK">
     <li>PEARL</li>
