--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
             color: blue;
             text-decoration: none;
         }
+      <div id=”opcoes-acessibilidade”>
+      <button id=”aumentar-fonte”>A+</button>
+      <button id=”diminuir-fonte”>A-</button>
+      </div>
+      </div>
+      class=”btn btn-primary
+     class=”btn btn-primary
+     fw-bold”>A+</button>
+     fw-bold”>A-</button>
+
+     
     </style>
 </head>
 <body> 
